--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -17,6 +17,7 @@
         body,
         html {
             height: 100%;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
         .row {
@@ -168,7 +169,7 @@
                     </div>
 
                     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-2 nav nav-pills">
-                        <a href="login"></a><button type="submit" class="btn btn-danger" role="button"
+                        <a href="../views/login.ejs"></a><button type="submit" class="btn btn-danger" role="button"
                                 id="login-btn">LOGIN</button>
                     </div>
                 </ul>
