--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -17,6 +17,7 @@
         body,
         html {
             height: 100%;
+            font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
 
         .row {
@@ -84,13 +85,13 @@
         /* div[class="container-fluid"] {
 outline: 4px dotted green;
 background-color: rgb(100, 0, 0, 0.2);
-}
+} */
 
-div[class="row"] {
+/* div[class="row"] {
 outline: 3px dotted rgb(234, 0, 255);
-}
+} */
 
-      div[class^="col"] {
+      /* div[class^="col"] {
 outline: 3px dotted rgb(189, 255, 6);
 } */
 
@@ -111,6 +112,23 @@ outline: 3px dotted rgb(189, 255, 6);
             background-position: center;
             background-repeat: no-repeat;
             background-size: cover;
+        }
+
+        .room-item {
+            padding-top: 80px;
+            padding-bottom: 80px;
+            text-align: center;
+            background-color: rgba(189, 211, 21, 0.9);
+        }
+
+        #content {
+            border-radius: 10px;
+            background-color:rgba(0, 0, 0, 0.7);
+            margin-top: 10px;
+            margin-left: 16.5%;
+            margin-right: 16.5%;
+            padding-bottom: 30px;
+            padding-top: 30px;
         }
 
         #viewrooms-btn {
@@ -172,15 +190,61 @@ outline: 3px dotted rgb(189, 255, 6);
         </div> <!-- container-fluid // END OF TOP NAV BAR // -->
 
         <div class="container-fluid">
-            <p>
-                <h4 id="header-label">LUXURIOUS EXPERIENCE</h4>
-            </p>
-        </div>
-
-        <div class="container-fluid">
-            <p id="viewrooms-btn">
-                <a href="#" class="btn btn-primary btn-lg">View Rooms <span class="glyphicon glyphicon-lamp"></span></a>
-            </p>
+            
+                <div id="content">
+                    <div class="row">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            
+                            <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+                                <!-- Indicators -->
+                                <ol class="carousel-indicators">
+                                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                                </ol>
+        
+                                <!-- Wrapper for slides -->
+                                <div class="carousel-inner">
+                                    <div class="item active">
+                                        <img src="./images/room.jpg" alt="d" style="width:100%; height:400px">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+        
+                                    <div class="item">
+                                        <img src="./images/hotel.jpg" alt="s" style="width:100%; height:200px">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+        
+                                    <div class="item">
+                                        <img src="./images/room2.jpg" alt="a" style="width:100%; height:200px">
+                                        <div class="carousel-caption d-none d-md-block">
+                                        </div>
+                                    </div>
+                                </div>
+        
+                                <!-- Left and right controls -->
+                                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                                    <span class="glyphicon glyphicon-chevron-left"></span>
+                                    <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                                    <span class="glyphicon glyphicon-chevron-right"></span>
+                                    <span class="sr-only">Next</span>
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row" id="room-information">
+                        <div class="col-lg-8 col-lg-offset-2">
+                            <div class="col-lg-4 room-item">Component 1</div>
+                            <div class="col-lg-4 room-item">Component 2</div>
+                            <div class="col-lg-4 room-item">Component 3</div>
+                        </div>
+                    </div>
+                </div>
+                
         </div>
 
     </div>
