--- a/app/views/partials/messages.ejs
+++ b/app/views/partials/messages.ejs
@@ -2,7 +2,7 @@
     <% errors.forEach(function(error) { %>
         <div class="alert alert-warning alert-dismissible" role="alert">
             <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
-            <%= error.msg %>
+            <div style="font-size:small"><%= error.msg %></div>
         </div>
     <% }); %>
 <% } %>
@@ -10,20 +10,20 @@
 <% if(success_msg != '') { %>
     <div class="alert alert-success alert-dismissible" role="alert">
         <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
-        <%= success_msg %>
+        <div style="font-size:small"><%= success_msg %></div>
     </div>
 <% } %>
 
 <% if(error_msg != '') { %>
     <div class="alert alert-warning alert-dismissible" role="alert">
         <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
-        <%= error_msg %>
+        <div style="font-size:small"><%= error_msg %></div>
     </div>
 <% } %>
 
 <% if(error != '') { %>
     <div class="alert alert-warning alert-dismissible" role="alert">
         <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
-        <%= error %>
+        <div style="font-size:small"><%= error %></div>
     </div>
 <% } %>
